fixed dark mode colors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,7 +92,7 @@ img {
 /*=============== THEME ===============*/
 /* Dark Mode */
 body.dark-mode {
-  background-color: #1a1a1a;
+  background-color: #2b2b2b;
   color: #f0f0f0;
 }
 
@@ -155,6 +155,9 @@ body.dark-mode {
   display: inline-block;
 }
 
+.dark-mode .nav__logo-name{
+  color: #f0f0f0;
+}
 
 
 
@@ -280,7 +283,6 @@ nav{
   color: var(--black-color);
   cursor: pointer;
   transition: color .3s ease-in-out;
-  font-weight: bold;
   border-bottom: 2px solid var(--black-color);
 }
 .nav__link_Contact{
@@ -291,7 +293,7 @@ nav{
  
 }
 .nav__link_Contact:hover{
-  color: var(--white-color);
+  color: #ff3333;
   cursor: pointer;
   transition: color .3s ease-in-out;
 }
